--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
 
     server {
         listen 50000;
-        server_name test;
+        server_name influx_grafana;
         location / {
             alias /grafana-1.9.1/;
         }
